# WiX-Template

./: .gitignore  Build-Installer.ps1  CLAUDE.md  LICENSE  README.md  build_msi.ps1  pyproject.toml
.claude/: settings.local.json
