[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileviewer"
version = "0.1.0"
description = "A simple GUI file viewer application using tkinter"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Yeonsoo Park", email = "yeonsoopark315@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Topic :: Desktop Environment :: File Managers",
]
dependencies = []  # tkinter is included with Python

[project.scripts]
fileviewer = "fileviewer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fileviewer*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W191",  # indentation contains tabs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"